--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,4 +36,8 @@
     "[json]": {
         "editor.formatOnSave": true
     },
+
+    "mypy-type-checker.importStrategy": "fromEnvironment",
+    "ruff.importStrategy": "fromEnvironment",
+    "ruff.configurationPreference": "filesystemFirst"
 }
