--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,7 @@ repos:
   rev: v0.5.1
   hooks:
   - id: ruff-format
-
-
+    name: ruff format
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.10.1
   hooks:
