--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   api:
-    container_name: mediary-api
+    container_name: fastapi
     build:
       context: .
       dockerfile: dockerfiles/api/Dockerfile
@@ -9,11 +9,13 @@ services:
     depends_on:
       - db
   db:
-    container_name: mediary-db
+    container_name: postgres
     image: postgres:latest
     ports:
       - 5432:5432
-    env_file:
-      - .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./db/data:/var/lib/postgresql/data
