--- a/dockerfiles/api/Dockerfile
+++ b/dockerfiles/api/Dockerfile
@@ -1,20 +1,18 @@
 ARG APP_NAME=mediary
-ARG APP_ENV=LOCAL
 
 # ------------------------------------------------------------------------------
 
 FROM python:3.12-slim AS base
 
 ARG APP_NAME
-ARG APP_ENV
-ENV APP_ENV=${APP_ENV} PATH=/home/${APP_NAME}/.venv/bin:$PATH
-WORKDIR /home/${APP_NAME}
+ENV PATH=/home/${APP_NAME}/.venv/bin:$PATH
 
 # ------------------------------------------------------------------------------
 
 FROM base AS builder
 
-COPY ./${APP_NAME} ./requirements.txt ./
+WORKDIR /home/${APP_NAME}
+COPY ${APP_NAME} ./requirements.txt ./
 RUN pip install uv && \
     uv venv /home/${APP_NAME}/.venv && \
     uv pip install -r requirements.txt
@@ -23,9 +21,13 @@ RUN pip install uv && \
 
 FROM base AS runner
 
-RUN adduser --disabled-password --gecos "Application User" \
+RUN find /etc/skel -type f -name ".*" -delete \
+    && adduser --disabled-password --comment "Application User" \
     --home "/home/${APP_NAME}" --shell /usr/sbin/nologin ${APP_NAME}
-COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /home /home
+WORKDIR /home/${APP_NAME}
+COPY --chown=${APP_NAME}:${APP_NAME} --chmod=750 ${APP_NAME} /home/${APP_NAME}
+COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /home/${APP_NAME}/.venv .venv
+
 
 EXPOSE 8000
 USER ${APP_NAME}
