--- a/dockerfiles/api/Dockerfile.alpine
+++ b/dockerfiles/api/Dockerfile.alpine
@@ -1,20 +1,18 @@
-ARG APP_NAME=mediary
-ARG APP_ENV=LOCAL
-
-# ------------------------------------------------------------------------------
-
 FROM python:alpine AS base
 
 ARG APP_NAME
-ARG APP_ENV
-ENV APP_ENV=${APP_ENV} PATH=/home/${APP_NAME}/.venv/bin:$PATH
+ENV PATH=/home/${APP_NAME}/.venv/bin:$PATH
+
+RUN find /etc/skel -type f -name ".*" -delete \
+    && adduser --disabled-password --comment "Application User" \
+    --home "/home/${APP_NAME}" --shell /usr/sbin/nologin ${APP_NAME}
 WORKDIR /home/${APP_NAME}
 
 # ------------------------------------------------------------------------------
 
 FROM base AS builder
 
-COPY ./${APP_NAME} ./requirements.txt ./
+COPY ${APP_NAME} ./requirements.txt ./
 RUN pip install uv && \
     uv venv /home/${APP_NAME}/.venv && \
     uv pip install -r requirements.txt
@@ -26,9 +24,6 @@ FROM base AS runner
 ARG GLIBC_REPO=https://github.com/sgerrand/alpine-pkg-glibc
 ARG GLIBC_VERSION=2.35-r1
 
-RUN adduser --disabled-password --gecos "Application User" \
-    --home "/home/${APP_NAME}" --shell /usr/sbin/nologin ${APP_NAME}
-
 # Install glibc compatibility for alpine
 RUN set -ex && \
     apk --update add libstdc++ curl ca-certificates && \
@@ -38,7 +33,8 @@ RUN set -ex && \
     rm -v /tmp/*.apk && \
     /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib
 
-COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /home /home
+COPY --chown=${APP_NAME}:${APP_NAME} --chmod=750 ${APP_NAME} /home/${APP_NAME}
+COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /home/${APP_NAME}/.venv .venv
 
 EXPOSE 8000
 USER ${APP_NAME}
