--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,19 @@
 services:
+
   api:
     container_name: fastapi
     build:
       context: .
       dockerfile: dockerfiles/api/Dockerfile
+      args:
+        APP_NAME: ${APP_NAME}
     ports:
       - 80:8000
+    environment:
+      APP_ENV: ${APP_ENV}
     depends_on:
       - db
+
   db:
     container_name: postgres
     image: postgres:latest
@@ -18,4 +24,4 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ./db/data:/var/lib/postgresql/data
+      - ./db/data:/var/lib/postgresql/dataservices
