--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,10 @@ services:
       APP_ENV: ${APP_ENV}
     depends_on:
       - db
+    volumes:
+      - ./mediary/app:/home/mediary/app
+      - ./mediary/settings:/home/mediary/settings
+      - ./mediary/alembic:/home/mediary/alembic
 
   db:
     container_name: postgres
