--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,13 @@ default_language_version:
   python: python3.12
 
 repos:
+- repo: https://github.com/PyCQA/bandit
+  rev: 1.7.9
+  hooks:
+  - id: bandit
+    args: ["-c", "pyproject.toml"]
+    additional_dependencies: ["bandit[toml]"]
+
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: v0.5.1
   hooks:
