--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ authors = [{ name = "PaszaVonPomiot", email = "undefined@example.com" }]
 requires-python = ">=3.12"
 readme = "README.md"
 license = { text = "GPL-3.0-only" }
-dependencies = ["uvicorn>=0.30.1", "fastapi>=0.111.0", "sqlmodel>=0.0.19"]
+dependencies = [
+    "uvicorn>=0.30.1",
+    "fastapi>=0.111.0",
+    "sqlmodel>=0.0.20",
+]
 
 [build-system]
 requires = ["pdm-backend"]
