--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
         APP_NAME: ${APP_NAME}
     ports:
       - 80:8000
+    env_file:
+      - .env
     environment:
       APP_ENV: ${APP_ENV}
     depends_on:
@@ -23,6 +25,8 @@ services:
       dockerfile: dockerfiles/db/Dockerfile.alpine
     ports:
       - 5432:5432
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
