--- a/dockerfiles/api/Dockerfile.alpine
+++ b/dockerfiles/api/Dockerfile.alpine
@@ -1,20 +1,22 @@
 FROM python:alpine AS base
 
 ARG APP_NAME
-ENV PATH=/home/${APP_NAME}/.venv/bin:$PATH
+ENV PATH=/${APP_NAME}/.venv/bin:$PATH
 
-RUN adduser --disabled-password --gecos "Application User" \
-    --home "/home/${APP_NAME}" --shell /usr/sbin/nologin ${APP_NAME}
-WORKDIR /home/${APP_NAME}
+RUN mkdir --mode=700 /${APP_NAME} \
+    && adduser --disabled-password --gecos "Application User" \
+    --home "/${APP_NAME}" --shell /usr/sbin/nologin ${APP_NAME}
+WORKDIR /${APP_NAME}
 
 # ------------------------------------------------------------------------------
 
 FROM base AS builder
 
-COPY ${APP_NAME} ./requirements.txt ./
-RUN pip install uv && \
-    uv venv /home/${APP_NAME}/.venv && \
-    uv pip install -r requirements.txt
+COPY . .
+RUN pip install --upgrade pip \
+    && pip install uv \
+    && uv venv \
+    && uv pip install -r requirements.txt
 
 # ------------------------------------------------------------------------------
 
@@ -32,8 +34,8 @@ RUN set -ex && \
     rm -v /tmp/*.apk && \
     /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib
 
-COPY --chown=${APP_NAME}:${APP_NAME} --chmod=750 ${APP_NAME} /home/${APP_NAME}
-COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /home/${APP_NAME}/.venv .venv
+COPY --chown=${APP_NAME}:${APP_NAME} --chmod=750 ${APP_NAME} /${APP_NAME}
+COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /${APP_NAME}/.venv .venv
 
 EXPOSE 8000
 USER ${APP_NAME}
