--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "pdm.backend"
 [tool.mypy]
 # plugins = "pydantic.mypy"
 python_version = "3.12"
-exclude = ["tests/", "temp/"]
+files = ["mediary/**/*.py"]
 
 [tool.ruff]
 line-length = 89
