--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,8 @@ sqlmodel==0.0.20
 starlette==0.37.2
 typer==0.12.3
 typing-extensions==4.12.2
-uvicorn[standard]==0.30.1
+uvicorn[standard]==0.30.3
 uvloop==0.19.0; (sys_platform != "cygwin" and sys_platform != "win32") and platform_python_implementation != "PyPy"
 watchfiles==0.22.0
 websockets==12.0
+.  # this package
