update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,11 @@
     "editor.cursorSurroundingLines": 1,
     "editor.minimap.scale": 2,
     "editor.minimap.maxColumn": 100,
+    "editor.mouseWheelZoom": true,
     "files.eol": "\n",
     "json.format.keepLines": false,
+    "workbench.tree.indent": 12,
+    "workbench.tree.renderIndentGuides": "always",
     "workbench.iconTheme": "material-icon-theme",
     "workbench.colorTheme": "Default Dark+",
     "terminal.integrated.defaultProfile.windows": "Windows PowerShell",
