--- a/dockerfiles/api/Dockerfile.slim.uv
+++ b/dockerfiles/api/Dockerfile.slim.uv
@@ -1,8 +1,8 @@
 FROM python:3.12-slim AS base
 
 ARG APP_NAME
-ENV PATH=/${APP_NAME}/.venv/bin:$PATH
-
+ENV PATH=/${APP_NAME}/.venv/bin:$PATH \
+    PYTHONPATH=/
 
 RUN find /etc/skel -type f -name ".*" -delete \
     && mkdir --mode=700 /${APP_NAME} \
@@ -27,7 +27,6 @@ FROM base AS runner
 
 COPY --from=builder --chown=${APP_NAME}:${APP_NAME} --chmod=750 /${APP_NAME}/.venv .venv
 COPY --chown=${APP_NAME}:${APP_NAME} --chmod=750 ${APP_NAME} /${APP_NAME}
-
 
 EXPOSE 8000
 USER ${APP_NAME}
