--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ fail_fast: true
 default_language_version:
   python: python3.12
 
+
+
 repos:
 - repo: https://github.com/PyCQA/bandit
   rev: 1.7.9
@@ -27,13 +29,18 @@ repos:
 - repo: https://github.com/pdm-project/pdm
   rev: 2.16.1
   hooks:
-  - id: pdm-lock-check
-    name: pdm lock check
   - id: pdm-export
     name: pdm export
     args: ['-o', 'requirements.txt', '--prod', '--without-hashes']
     files: ^pdm.lock$
     always_run: true
+
+- repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+  rev: v1.3.3
+  hooks:
+  -   id: python-safety-dependencies-check
+      files: requirements
+      args: ["--disable-optional-telemetry"]
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.6.0
