--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
     container_name: fastapi
     build:
       context: .
-      dockerfile: dockerfiles/api/Dockerfile.alpine_uv
+      dockerfile: dockerfiles/api/Dockerfile.slim_uv
       args:
         APP_NAME: ${APP_NAME}
     ports:
@@ -17,7 +17,7 @@ services:
       - db
     volumes:
       - ./mediary/app:/mediary/app
-      - ./mediary/settings:/mediary/settings
+      - ./mediary/config:/mediary/config
       - ./mediary/alembic:/alembic
   db:
     container_name: postgres
