--- a/dockerfiles/api/Dockerfile.alpine_uv
+++ b/dockerfiles/api/Dockerfile.alpine_uv
@@ -1,4 +1,4 @@
-FROM python:alpine AS base
+FROM python:3.12-alpine AS base
 
 ARG APP_NAME
 ENV PATH=/${APP_NAME}/.venv/bin:$PATH \
@@ -14,7 +14,7 @@ WORKDIR /${APP_NAME}
 FROM base AS builder
 
 COPY . .
-RUN pip install --upgrade pip \
+RUN pip install --root-user-action=ignore --upgrade pip \
     && pip install uv \
     && uv venv \
     && uv pip install -r requirements.txt
