--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,16 @@ authors = [{ name = "PaszaVonPomiot", email = "undefined@example.com" }]
 requires-python = ">=3.12"
 readme = "README.md"
 license = { text = "GPL-3.0-only" }
-dependencies = ["uvicorn>=0.30.1", "fastapi>=0.111.0", "sqlmodel>=0.0.20"]
+dependencies = [
+    "uvicorn>=0.30.1",
+    "fastapi>=0.111.0",
+    "sqlmodel>=0.0.20",
+    "colorlog>=6.9.0",
+    "alembic>=1.14.0",
+    "asyncpg>=0.30.0",
+    "sqlalchemy[asyncio]>=2.0.36",
+    "pydantic-settings>=2.6.1",
+]
 
 [build-system]
 requires = ["pdm-backend"]
@@ -39,9 +48,12 @@ ignore = [
     "ARG001", # Unused function argument
     "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
     "UP015",  # Unnecessary open() mode parameters
+
 ]
 fixable = ["ALL"]
-unfixable = []
+unfixable = [
+    "F401", # Imported but unused
+]
 
 
 [tool.ruff.lint.per-file-ignores]
@@ -66,6 +78,12 @@ exclude_dirs = ["tests", ".venv", "temp"]
 
 [tool.pdm.dev-dependencies]
 test = ["pytest>=8.2.2"]
-lint = ["mypy>=1.10.1", "ruff>=0.5.1", "bandit[toml]>=1.7.9"]
 git = ["pre-commit>=3.7.1"]
 version = []
+
+[dependency-groups]
+lint = [
+    "mypy>=1.10.1",
+    "ruff>=0.5.1",
+    "bandit[toml]>=1.7.9",
+]
